[package]
name = "aliaser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A secure, local identity and password manager"
license = "GPL"

[dependencies]
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
colored = "2.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
